objects/ASI_CRM_JP_Item_Availability__c.object
<CustomObject>
    <description>For JP CRM3</description>
    <fields>
        <fullName>ASI_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Lot_Number_2__c</fullName>
        <label>Lot Number 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Quantity_Adjustment__c</fullName>
        <label>Quantity Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Quantity_Availability__c</fullName>
        <formula>ASI_Quantity_On_hand__c + ASI_Quantity_Adjustment__c - ASI_Quantity_Hard_Commit__c - ASI_Quantity_Soft_Commit__c - ASI_SFDC_SO_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Availability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Quantity_Hard_Commit__c</fullName>
        <label>Quantity Hard Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Quantity_On_hand__c</fullName>
        <label>Quantity On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Quantity_Soft_Commit__c</fullName>
        <label>Quantity Soft Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_SFDC_SO_Commit__c</fullName>
        <label>SFDC SO Commit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Item Availabilities</relationshipLabel>
        <relationshipName>SKU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_Warehouse_Location__c</fullName>
        <label>Warehouse Location</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Item Availability</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_CRM_JP_DF_Item_Availability</fullName>
        <columns>NAME</columns>
        <columns>ASI_Warehouse_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_JP_Item_Availability__c.ASI_JP_CRM_DF_Item_Availability</value>
        </filters>
        <label>All CRM JP DF Item Availability</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_CRM_JP_DP_Item_Availability</fullName>
        <columns>NAME</columns>
        <columns>ASI_Warehouse_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_JP_Item_Availability__c.ASI_JP_CRM_DP_Item_Availability</value>
        </filters>
        <label>All CRM JP DP Item Availability</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Item Availability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Availabilities</pluralLabel>
    <recordTypes>
        <fullName>ASI_JP_CRM_DF_Item_Availability</fullName>
        <active>true</active>
        <label>JP DF Item Availability</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_JP_CRM_DP_Item_Availability</fullName>
        <active>true</active>
        <label>JP DP Item Availability</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>